<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/mode_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/basic_margin"
        android:drawableStart="@drawable/ic_power"
        android:drawablePadding="@dimen/drawable_padding"
        android:text="@string/mode"
        android:textSize="@dimen/text_size_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/mode_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/basic_margin"
        android:text="@string/on_off"
        app:layout_constraintBottom_toBottomOf="@id/mode_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/mode_text" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/basic_margin"
        android:background="@color/black"
        android:backgroundTint="?colorControlNormal"
        app:layout_constraintTop_toBottomOf="@id/mode_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/intensity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/basic_margin"
        android:text="@string/intensity"
        android:textSize="@dimen/text_size_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/seekbar_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/basic_margin"
        android:text="@string/zero"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/intensity_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/intensity_text"
        tools:text="42" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/basic_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/intensity_text" />

</androidx.constraintlayout.widget.ConstraintLayout>